# holocron

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  docker-image.yml
backend/: Dockerfile  README.md  config-docker.yml  config.yml  pyproject.toml
backend/data/oggdude/: Gears.xml
backend/holocron/: __init__.py  app.py  definitions.py  utils.py
backend/holocron/application/: data_service.py
backend/holocron/domain/: adversary.py  armor.py  characteristic.py  data_repository.py  gear.py  item_descriptor.py  talent.py  weapon.py
backend/holocron/domain/oggdude/: oggdude_mod.py  oggdude_mod_builder.py  oggdude_source.py
backend/holocron/infrastructure/api/: attachment_schema.py  data_controller.py  gear_schema.py  setup.py
backend/holocron/infrastructure/database/file/: file_repository.py  oggdude2.py
backend/test/: test_data_controller.py
data/: attachments.json
data/oggdude/: Armors.xml  Gears.xml  ItemAttachments.xml  ItemDescriptors.xml  Talents.xml  Weapons.xml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ParsedText.tsx  TargetContext.tsx  adversaries.ts  adversary.ts  character.ts  dataStore.ts  main.tsx  skillMap.ts  spendingDiceResultsInCombat.ts  target.ts  targetStore.ts  targets.ts  turnStore.ts  useDisableArrowKeyScrolling.ts  utils.ts  (+2 more)
holocron/: app.py  config.yml  container.py  definitions.py  utils.py
test/: test_data_controller.py
(+124 files in other folders)
